versioned_docs/version-2025.2.3/professor/leocadia_candido_da_silva.mdx
import { Grid } from "@site/src/components/Grid";
import BrowserOnly from "@docusaurus/BrowserOnly";

export const data = {
  "title": "Leocadia Candido da Silva",
  "base": "",
  "weekClasses": [
    {
      "dayName": "Segunda-Feira",
      "dayClasses": [
        {
          "subject": "Contabilidade de custo e formação de preços - 2429",
          "size": 2,
          "teachers": [
            "Leocadia Candido da Silva"
          ],
          "classroom": "sala_14-2",
          "students": [
            "COM2024"
          ],
          "time": "07:30 - 08:20",
          "color": ""
        },
        {
          "subject": "Planejamento e Gestão financeira - 2464",
          "size": 1,
          "teachers": [
            "Leocadia Candido da Silva"
          ],
          "classroom": "sala_3-1",
          "students": [
            "COM2023"
          ],
          "time": "11:05 - 11:55",
          "color": ""
        },
        {
          "subject": "Técnicas de venda e negociação - 2467",
          "size": 2,
          "teachers": [
            "Leocadia Candido da Silva"
          ],
          "classroom": "sala_3-1",
          "students": [
            "COM2023"
          ],
          "time": "13:10 - 14:00",
          "color": ""
        }
      ]
    },
    {
      "dayName": "Terça-Feira",
      "dayClasses": [
        {
          "subject": "Fundamentos da Contabilidade - 2332",
          "size": 2,
          "teachers": [
            "Leocadia Candido da Silva"
          ],
          "classroom": "sala_7-2",
          "students": [
            "COM2025"
          ],
          "time": "13:10 - 14:00",
          "color": ""
        },
        {
          "subject": "Introdução a Contabilidade - 1158",
          "size": 2,
          "teachers": [
            "Leocadia Candido da Silva"
          ],
          "classroom": "sala_3-1",
          "students": [
            "TGC2025"
          ],
          "time": "19:00 - 19:50",
          "color": ""
        }
      ]
    },
    {
      "dayName": "Quarta-Feira",
      "dayClasses": []
    },
    {
      "dayName": "Quinta-Feira",
      "dayClasses": [
        {
          "subject": "Planejamento e Gestão financeira - 2464",
          "size": 2,
          "teachers": [
            "Leocadia Candido da Silva"
          ],
          "classroom": "sala_3-1",
          "students": [
            "COM2023"
          ],
          "time": "09:25 - 10:15",
          "color": ""
        },
        {
          "subject": "Introdução a Contabilidade - 1158",
          "size": 2,
          "teachers": [
            "Leocadia Candido da Silva"
          ],
          "classroom": "sala_3-1",
          "students": [
            "TGC2025"
          ],
          "time": "19:00 - 19:50",
          "color": ""
        }
      ]
    },
    {
      "dayName": "Sexta-Feira",
      "dayClasses": []
    }
  ],
  "time": [
    {
      "time": "07:30 - 08:20",
      "size": 50
    },
    {
      "time": "08:20 - 09:10",
      "size": 50
    },
    {
      "time": "09:25 - 10:15",
      "size": 50
    },
    {
      "time": "10:15 - 11:05",
      "size": 50
    },
    {
      "time": "11:05 - 11:55",
      "size": 50
    },
    {
      "time": "13:10 - 14:00",
      "size": 50
    },
    {
      "time": "14:00 - 14:50",
      "size": 50
    },
    {
      "time": "15:05 - 15:55",
      "size": 50
    },
    {
      "time": "15:55 - 16:45",
      "size": 50
    },
    {
      "time": "16:45 - 17:35",
      "size": 50
    },
    {
      "time": "19:00 - 19:50",
      "size": 50
    },
    {
      "time": "19:50 - 20:40",
      "size": 50
    },
    {
      "time": "21:00 - 21:50",
      "size": 50
    },
    {
      "time": "21:50 - 22:40",
      "size": 50
    }
  ]
}

# Leocadia Candido da Silva

<div>
  {
    <BrowserOnly>
      {() => (
        <Grid
          title={data.title}
          weekClasses={data.weekClasses}
          time={data.time}
        />
      )}
    </BrowserOnly>
  }
</div>
